--- a/pizza.css
+++ b/pizza.css
@@ -2,6 +2,10 @@ body{
     background-image: url("hatter.jpg");
 }
 
+#kinalat{
+    border-bottom: 2px dotted blue;
+}
+
 #ajanlat {
     text-align: center;
     border-radius: 20px;
