--- a/pizza.css
+++ b/pizza.css
@@ -7,6 +7,19 @@ body{
 }
 
 #ajanlat {
+    margin: 0 auto;
     text-align: center;
     border-radius: 20px;
+}
+
+footer a,
+footer a:link,
+footer a:active,
+footer a:visited{
+    color: yellow;
+    text-decoration: none;
+}
+
+footer a:hover{
+    text-decoration: underline;
 }
